<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivityF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/detailF_foto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/foto" />

        <TextView
            android:id="@+id/detailF_negara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="12dp"
            android:text="@string/pesertaF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textSize="14sp"
                    android:text="@string/pelatih"/>

                <TextView
                    android:id="@+id/detailF_pelatih"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/material_motion_duration_long_1"
                    android:text="@string/pesertaF"
                    android:textSize="14sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textSize="14sp"
                    android:text="@string/pemain"/>

                <TextView
                    android:id="@+id/detailF_pemain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/material_motion_duration_long_1"
                    android:text="@string/pesertaF"
                    android:textSize="14sp" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <Button
                android:id="@+id/btn_share"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_weight="1"
                android:text="@string/share"
                android:textSize="12sp"
                android:textStyle="bold"
                android:padding="10dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>